; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-trust.c_tr_setmute.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-trust.c_tr_setmute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trust = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.trust*, i32)* @tr_setmute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tr_setmute(%struct.trust* %0, i32 %1) #0 {
  %3 = alloca %struct.trust*, align 8
  %4 = alloca i32, align 4
  store %struct.trust* %0, %struct.trust** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.trust*, %struct.trust** %3, align 8
  %6 = getelementptr inbounds %struct.trust, %struct.trust* %5, i32 0, i32 2
  %7 = call i32 @mutex_lock(i32* %6)
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = load %struct.trust*, %struct.trust** %3, align 8
  %14 = getelementptr inbounds %struct.trust, %struct.trust* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.trust*, %struct.trust** %3, align 8
  %16 = getelementptr inbounds %struct.trust, %struct.trust* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = and i32 %17, 247
  %19 = load %struct.trust*, %struct.trust** %3, align 8
  %20 = getelementptr inbounds %struct.trust, %struct.trust* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = shl i32 %21, 3
  %23 = or i32 %18, %22
  %24 = load %struct.trust*, %struct.trust** %3, align 8
  %25 = getelementptr inbounds %struct.trust, %struct.trust* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.trust*, %struct.trust** %3, align 8
  %27 = getelementptr inbounds %struct.trust, %struct.trust* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.trust*, %struct.trust** %3, align 8
  %30 = getelementptr inbounds %struct.trust, %struct.trust* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @outb(i32 %28, i32 %31)
  %33 = load %struct.trust*, %struct.trust** %3, align 8
  %34 = getelementptr inbounds %struct.trust, %struct.trust* %33, i32 0, i32 2
  %35 = call i32 @mutex_unlock(i32* %34)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
